Prevent too tall confirm dialog content

--- a/packages/core/src/renderer/components/confirm-dialog/confirm-dialog.scss
+++ b/packages/core/src/renderer/components/confirm-dialog/confirm-dialog.scss
@@ -41,6 +41,11 @@
       font-size: small;
       margin-top: $margin;
     }
+
+    .confirm-dialog-scrollable-content {
+      overflow: auto;
+      max-height: 200px;
+    }
   }
 
   .confirm-buttons {
